Implemented Connection Workflow
